# nbreqs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
nbreqs/: cli.py  nbreqs.py
tests/: basic_imports_requirements.txt  latex_cell.ipynb  non_pypi_pkg.ipynb  test.ipynb  test_cli_functions.py  test_notebooks.py  test_requirements.txt
