[tool.poetry]
name = "nbreqs"
version = "0.2.3"
description = "Generate notebook_requirements.txt files for Jupyter Notebooks (.ipynb files)."
authors = ["Michel Lavoie <lavoie.michel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nbconvert = "^7.16.4"
rich-click = "^1.8.3"
stdlib-list = "^0.10.0"
ipython = "^8.27.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
pre-commit = "^3.8.0"
click = "^8.1.7"
types-requests = "^2.32.0.20241016"
types-stdlib-list = "^0.8.3.4"
twine = "^5.1.1"

[tool.poetry.scripts]
nbreqs = "nbreqs.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
